[package]
name = "astria-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
